--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+APScheduler==3.7.0
 asgiref==3.3.1
 certifi==2020.12.5
 chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.1.6
+django-apscheduler==0.5.2
 django-on-heroku==1.1.2
 djangorestframework==3.12.2
 gunicorn==20.0.4
@@ -10,6 +12,8 @@ idna==2.10
 psycopg2-binary==2.8.6
 pytz==2021.1
 requests==2.25.1
+six==1.15.0
 sqlparse==0.4.1
+tzlocal==2.1
 urllib3==1.26.3
 whitenoise==5.2.0
